--- a/mater-play-frontend/package.json
+++ b/mater-play-frontend/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
