--- a/mater-play-backend/package.json
+++ b/mater-play-backend/package.json
@@ -25,11 +25,13 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@supabase/supabase-js": "github:supabase/supabase-js",
     "@vitejs/plugin-react": "^4.3.2",
     "mater-play-backend": "file:",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "supabase": "^1.223.10",
     "typeorm": "^0.3.20",
     "vite": "^5.4.9"
   },
@@ -39,6 +41,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
